@@ -1,7 +1,7 @@
 #!/bin/sh
 # WARNING: This file was auto-generated. Do not edit!
 #
-# $Id: svctool.in,v 2.550 2021-04-20 13:52:22+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.551 2021-04-22 19:15:01+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -28,7 +28,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.550 2021-04-20 13:52:22+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.551 2021-04-22 19:15:01+05:30 Cprogrammer Exp mbhangui $"
 
 if [ -d /run/mysqld ] ; then
 	mysqlSocket=/run/mysqld/mysqld.sock
@@ -1640,6 +1640,8 @@ check_libmysqlclient_lib()
 		mysqllib=`cat "$DESTDIR"$CONTROLDIR/mysql_lib 2>/dev/null`
 		if [ -f $mysqllib ] ; then
 			return 0
+		else
+			mysqllib=""
 		fi
 	fi
 	# upgrade MYSQL_LIB for dynamic loading of libmysqlclient
